--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Если вы ищете лучшие сервисы по доставке готовой еды в Санкт-Петербурге, то вы попали по адресу. В Санкт-Петербурге множество заведений, предлагающих вкусную и свежую готовую еду. Рейтинг и топ, отзывы 2025.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<link rel="icon" href="/logo-icon.png"/>
+	<meta name="yandex-verification" content="018f9f811ae4ad7b" />
 	<!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
